<resources>
    <string name="app_name">Coursera</string>
    <string name="settingsButton">Settings</string>
    <string name="settings">Settings</string>
    <string name="london">London</string>
    <string name="washington">Washington</string>
    <string name="beijing">Beijing</string>
    <string name="moscow">Moscow</string>
    <string name="berlin">Berlin</string>
    <string name="city">City</string>
</resources>
