<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings"
        android:textSize="40sp"
        android:layout_marginBottom="5sp"/>

    <Button
        android:id="@+id/londonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/london"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5sp"
        android:onClick="londonButtonClicked"
        />
    <Button
        android:id="@+id/washingtonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/washington"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5sp"
        android:onClick="washingtonButtonClicked"/>
    <Button
        android:id="@+id/moscowButton"
        android:text="@string/moscow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5sp"
        android:onClick="moscowButtonClicked"/>
    <Button
        android:id="@+id/beijingButton"
        android:text="@string/beijing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5sp"
        android:onClick="beijingButtonClicked"/>
    <Button
        android:id="@+id/berlinButton"
        android:text="@string/berlin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:layout_marginBottom="5sp"
        android:onClick="berlinButtonClicked"/>

</LinearLayout>
